Fix homepage URL in package.json

--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{"homepage": "https://https://layiacademy1-sketch.github.io/LAYI-CONTACT"
+{"homepage": "https://layiacademy1-sketch.github.io/LAYI-CONTACT"
   "name": "layi-contact",
   "private": true,
   "version": "0.0.0",
