--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "layi-contact",
+  "name": "layi",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "tsc --noEmit"
   },
   "dependencies": {
     "react-dom": "^19.2.4",
